--- a/myspringcloud/lcnClientServer/src/main/resources/application.properties
+++ b/myspringcloud/lcnClientServer/src/main/resources/application.properties
@@ -11,14 +11,13 @@ feign.httpclient.enabled=true
 # 定义事务协调器所在位置。根据具体环境定义其中的IP地址和端口。
 tm.manager.url=http://127.0.0.1:8899/tx/manager/
 
-
+##数据库配置
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.url=jdbc:mysql://192.168.1.60:3306/xchuangw?useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC
 spring.datasource.sql-script-encoding=utf-8
 spring.datasource.username=xchuangw
 spring.datasource.password=rrkj$xchuangw
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=1000MB
 spring.datasource.initialSize=5
@@ -35,10 +34,11 @@ spring.datasource.poolPreparedStatements=true
 spring.datasource.maxPoolPreparedStatementPerConnectionSize=20
 spring.datasource.filters=stat,wall,log4j
 spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
-#spring.datasource.useGlobalDataSourceStat=true
-
 mybatis.mapper-locations=classpath*:mapping/*.xml
 
-
+##lcn分布式事务配置
 tx-lcn.client.manager-address=127.0.0.1:8070
 spring.transaction.rollback-on-commit-failure=true
+##log4j2配置
+logging.config=classpath:Log4j2.xml
+logging.level.root=INFO
