--- a/myspringcloud/userServer/src/main/resources/application.properties
+++ b/myspringcloud/userServer/src/main/resources/application.properties
@@ -42,3 +42,7 @@ mybatis.mapper-locations=classpath*:mapping/*.xml
 
 tx-lcn.client.manager-address=127.0.0.1:8070
 spring.transaction.rollback-on-commit-failure=true
+
+##log4j2≈‰÷√
+logging.config=classpath:Log4j2.xml
+logging.level.root=INFO
