--- a/myspringcloud/userServer/pom.xml
+++ b/myspringcloud/userServer/pom.xml
@@ -67,7 +67,11 @@
         <!-- feign -->
 
 
-
+        <!--连接redis-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
 
         <!-- MyBatis-->
         <dependency>
