feat(controller):切换数据库和项目格式

--- a/myspringcloud/lcnClientServer/src/main/resources/application.properties
+++ b/myspringcloud/lcnClientServer/src/main/resources/application.properties
@@ -13,10 +13,10 @@ tm.manager.url=http://127.0.0.1:8899/tx/manager/
 
 ## ˝æ›ø‚≈‰÷√
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.url=jdbc:mysql://192.168.1.60:3306/xchuangw?useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/book?useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC
 spring.datasource.sql-script-encoding=utf-8
-spring.datasource.username=xchuangw
-spring.datasource.password=rrkj$xchuangw
+spring.datasource.username=root
+spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=1000MB
