feat(controller):添加solr搜索引擎

--- a/myspringcloud/user2Server/src/main/resources/application.properties
+++ b/myspringcloud/user2Server/src/main/resources/application.properties
@@ -46,3 +46,6 @@ spring.transaction.rollback-on-commit-failure=true
 ##log4j2配置
 logging.config=classpath:Log4j2.xml
 logging.level.root=INFO
+
+##配置solr服务器地址和core
+spring.data.solr.host=http://localhost:8888/solr/myCore
