--- a/myspringcloud/user2Server/pom.xml
+++ b/myspringcloud/user2Server/pom.xml
@@ -151,6 +151,12 @@
             <version>2.10.5</version>
         </dependency>
 
+        <!--集成solr搜索引擎客户端-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-solr</artifactId>
+        </dependency>
+
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
