feat(all):sentinel相关

--- a/myspringcloud/gatewayServer/src/main/resources/application.properties
+++ b/myspringcloud/gatewayServer/src/main/resources/application.properties
@@ -22,3 +22,12 @@ spring.cloud.gateway.routes[1].id=lcnClient
 spring.cloud.gateway.routes[1].predicates[0]=Path=/lcnClient/**
 #（跳转到在注册中心上名字为user-service的服务）
 spring.cloud.gateway.routes[1].uri=lb://lcnClient
+
+spring.cloud.gateway.filter.remove-non-proxy-headers.headers[2]=dummy
+#（将url去掉第一个前缀（user-service））
+spring.cloud.gateway.routes[2].filters[0]=StripPrefix=1
+spring.cloud.gateway.routes[2].id=feignServer
+#（拦截以user-service开头的url）
+spring.cloud.gateway.routes[2].predicates[0]=Path=/feignServer/**
+#（跳转到在注册中心上名字为user-service的服务）
+spring.cloud.gateway.routes[2].uri=lb://feignServer
