--- a/myspringcloud/user2Server/pom.xml
+++ b/myspringcloud/user2Server/pom.xml
@@ -35,6 +35,7 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-consul-discovery</artifactId>
+            <version>2.2.4.RELEASE</version>
         </dependency>
         <!-- consul的配置 -->
 
