--- a/myspringcloud/user2Server/src/main/resources/application.properties
+++ b/myspringcloud/user2Server/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8005
 spring.profiles.active=dev
-    spring.application.name=lcnClient
+spring.application.name=lcnClient
 spring.cloud.consul.host=localhost
 spring.cloud.consul.port=8500
 spring.cloud.consul.discovery.healthCheckPath=/actuator/health
@@ -18,6 +18,7 @@ spring.datasource.sql-script-encoding=utf-8
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+mybatis.mapper-locations=classpath*:mapping/*.xml
 
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=1000MB
@@ -37,15 +38,14 @@ spring.datasource.filters=stat,wall,log4j
 spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
 #spring.datasource.useGlobalDataSourceStat=true
 
-mybatis.mapper-locations=classpath*:mapping/*.xml
 
 
 tx-lcn.client.manager-address=127.0.0.1:8070
 spring.transaction.rollback-on-commit-failure=true
 
-##log4j2配置
+#log4j2配置
 logging.config=classpath:Log4j2.xml
 logging.level.root=INFO
 
-##配置solr服务器地址和core
+#配置solr服务器地址和core
 spring.data.solr.host=http://localhost:8888/solr/myCore
